Fixed bug #41304 (compress.zlib temp files left)